fix(dungeon): 副本系统代码审查 30 项全修（P0-P3）+ 拆分 NodeRouter
P0（5）：TownScrollUsePayload 加 intent 校验消除物品错配 / 改包绕过；
ReviveRequestPayload 改为前置校验通过后再扣图腾；
持久化 instance.flagshipUuid + advanceNode 幂等，消灭节点重入刷物品；
SelectStagePayload 锁定 instanceId 期间禁改 stageId；
DungeonScriptManager 固定 overworld dataStorage 防双 SavedData 拆分。

P1（7）：sweepLeaks 自动清理 SUSPENDED 24h 以上的 instance；
portal 在 instanceId 缺失/orphan 10min 自动 discard；
cleanupRegion 显式 discard portal/crate + 延迟 instanceIndex 回收防跨实例错位；
死亡只移除 HARMFUL 保留 Combat+ Buff；
DungeonRegistrySyncPayload 4MiB cap + IO 线程解析；
NodeBattleField 缺失实体自动开通完成 portal 防卡死。

P2（9）：onPlayerLogout 不再早退 + 旗手掉线接旗钥匙转移；
lectern dim 还原失败 warn；fillCrate 不覆盖玩家放入物品；
lectern 跨 lobby 先 leave 旧 lobby；nodeId 字典序 index 防碰撞；
script setDirty 节流；DungeonBookMenu ESC 不再解散 lobby；
LobbyUpdatePayload size 越界 throw。

P3（9 + 重构）：拆出 DungeonNodeRouter（节点路由）/ RewardDispatcher（奖励分发）；
NodeData.RewardEntry/CostEntry 加 resolvedItem 缓存；StageData 加 adjacency / nodeIndex 缓存；
LootShipEntity 改用 ContainerHelper；DungeonHudLayer 切维度自动清屏；
DungeonInstance.getPlayerUuids/getClearedNodes 改 unmodifiableSet。

详见 docs/code_review_dungeon_2026-04-18.md

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>